sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var nb=false
  var n=0
  do {
    nb = false
    for(i<- 0 to getNombreValeurs()-2-n){
      for (j <- 0 to getNombreValeurs()-2-i){
        if( plusPetit(j+1,j)){
          echange(j,j+1)
          nb=true
        }
        else {
          break
        }
      }
    }
  }
  while(nb==true)
}